--- a/index.html
+++ b/index.html
@@ -1,12 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Johana's Week 1</title>
-</head>
-<body>
-    
-</body>
+    <style>
+      h1 {
+        color: #885df1;
+        font-size: 48px;
+        text-decoration: underline;
+        font-weight: 400;
+        text-align: center;
+      }
+      h2 {
+        color: #272044;
+        font-size: 30px;
+        text-align: center;
+      }
+      body {
+        background: #f6f2fe;
+      }
+      img {
+        display: block;
+        margin: 0 auto;
+      }
+      p {
+        text-align: center;
+      }
+      button {
+        display: block;
+        margin: 0 auto;
+        padding: 10px 20px 10px 20px;
+        color: #ab96f2;
+        border: 2px solid #ab96f2;
+        border-radius: 30px;
+        box-shadow: 2px 2px 2px 2px#ab96f2;
+      }
+      button:hover {
+        background: blueviolet;
+        color: #ffffff;
+        transition: all 200ms ease;
+      }
+      .advanced {
+        color: blue;
+      }
+      .material {
+        color: red;
+      }
+      .experience {
+        color: green;
+      }
+      ul {
+        list-style: none;
+        padding: 0;
+        text-align: center;
+      }
+      li {
+        list-style-type: none;
+        display: inline-block;
+        padding: 10px 10px 20px;
+      }
+      a {
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+     .contact-detail {
+        text-align:center;
+        margin: 30px;
+      }
+      .contact-platform {
+        color: #885df1;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>SheCodes</h1>
+    <h2>Coding Workshop</h2>
+    <button type="button">Apply Now</button>
+    <ul>
+      <li
+          href="https://www.shecodes.io/students"
+          target="_blank"
+          class="advanced"
+        >
+          Coders
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://www.shecodes.io/workshops"
+          target="_blank"
+          class="material"
+        >
+          Courses
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://www.shecodes.io/stories"
+          target="_blank"
+          class="experience"
+        >
+          Stories
+        </a>
+      </li>
+    </ul>
+    <hr />
+    <p><strong> More info </strong></p>
+    <img
+      src="https://www.edgehill.ac.uk/news/files/2019/02/coding-image.jpg"
+      alt="Woman coding"
+      width="400"
+    />
+    <div class="contact-detail">
+      <span class="contact-platform"> Email:</span> hello@shecodes.io
+      <span class="contact-platform"> Instagram:</span> @shecodes.io
+    </div>
+  </body>
 </html>
